# CapitalGainsTaxCalculator

./: .flake8  .pre-commit-config.yaml  README.md  create_github_issues.py  env.example  pyproject.toml  requirements.txt  update_docs.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  update-docs.yml
docs/: README.md
docs/wiki/: Home.md  Task-Progress.md
docs/wiki/templates/: task-completion-template.md
specs/001-a-personalized-version/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-personalized-version/contracts/: binance-api.yaml  cgt-calculator.yaml  csv-importer.yaml
src/: config.yaml
src/crypto_tax_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crypto_tax_calculator/cli/: main.py
src/crypto_tax_calculator/models/: __init__.py  asset.py  cgt_report.py  exchange.py  transaction.py
src/crypto_tax_calculator/services/: __init__.py  binance_service.py  cgt_calculator.py  csv_importer.py
src/crypto_tax_web/: app.py
src/crypto_tax_web/cli/: main.py
src/data/: .encryption_key  .secrets  crypto_tax_calc.db
src/shared/: config.py  database.py  logging_config.py  secrets.py
tests/contract/binance/: test_api_status.py  test_api_sync.py  test_api_transactions.py
tests/contract/csv/: test_csv_import.py  test_csv_templates.py  test_csv_validation.py
